--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       height: 100vh;
       margin: 0;
       flex-direction: column;
+      padding: 20px;
+      box-sizing: border-box;
     }
     h1 {
       font-size: 3rem;
@@ -25,11 +27,32 @@
     p {
       font-size: 1.2rem;
       color: #666;
+      margin: 5px 0;
+    }
+    .info {
+      margin-top: 20px;
+      background: #fff0f5;
+      padding: 15px 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #f0c0d8;
+      max-width: 400px;
+      text-align: center;
+      color: #d6336c;
     }
   </style>
 </head>
 <body>
   <h1>Hola Mundo</h1>
   <p>¡Bienvenida a mi página personal!</p>
+  
+  <div class="info">
+    <h2>Datos personales</h2>
+    <p><strong>Nombre:</strong> Lucía Cristel Ramírez Romero</p>
+    <p><strong>Número de control:</strong> 1222100464</p>
+    <p><strong>Carrera:</strong> Ingeniería en Desarrollo y Gestión de Software</p>
+    <p><strong>Universidad:</strong> UTNG</p>
+    <p><strong>Email:</strong> cristel23rr@gmail.com</p>
+  </div>
 </body>
 </html>
+
