--- a/index.html
+++ b/index.html
@@ -9,28 +9,29 @@
       background: #ffe4e1;
       color: #333;
       font-family: 'Arial', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       margin: 0;
-      flex-direction: column;
+      padding: 0;
+    }
+    header {
+      background-color: #ffb6c1;
       padding: 20px;
-      box-sizing: border-box;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-      color: #d6336c;
-      text-shadow: 1px 1px 3px #ffb6c1;
+    header h1 {
+      margin: 0;
+      color: #800040;
+      font-size: 2.5rem;
     }
-    p {
-      font-size: 1.2rem;
-      color: #666;
-      margin: 5px 0;
+    main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: calc(100vh - 100px);
+      padding: 20px;
     }
     .info {
-      margin-top: 20px;
       background: #fff0f5;
       padding: 15px 20px;
       border-radius: 10px;
@@ -42,17 +43,23 @@
   </style>
 </head>
 <body>
-  <h1>Hola Mundo</h1>
-  <p>¡Bienvenida a mi página personal!</p>
-  
-  <div class="info">
-    <h2>Datos personales</h2>
-    <p><strong>Nombre:</strong> Lucía Cristel Ramírez Romero</p>
-    <p><strong>Número de control:</strong> 1222100464</p>
-    <p><strong>Carrera:</strong> Ingeniería en Desarrollo y Gestión de Software</p>
-    <p><strong>Universidad:</strong> UTNG</p>
-    <p><strong>Email:</strong> cristel23rr@gmail.com</p>
-  </div>
+
+  <header>
+    <h1>Encabezado principal: Luci </h1>
+  </header>
+
+  <main>
+    <p>¡Bienvenida a mi página personal creada con cariño!</p>
+
+    <div class="info">
+      <h2>Datos personales</h2>
+      <p><strong>Nombre:</strong> Lucía Cristel Ramírez Romero</p>
+      <p><strong>Número de control:</strong> 1222100464</p>
+      <p><strong>Carrera:</strong> Ingeniería en Desarrollo y Gestión de Software</p>
+      <p><strong>Universidad:</strong> UTNG</p>
+      <p><strong>Email:</strong> cristel23rr@gmail.com</p>
+    </div>
+  </main>
+
 </body>
 </html>
-
